@@ -48,6 +48,7 @@
 - fix error handing in do_mount_indirect().
 - expire thread use pending mutex.
 - add external bind method.
+- fix cache_delete() is to aggressive.
 
 03/09/2009 autofs-5.0.5
 -----------------------
